# cli-tools

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SECURITY.md
ahrefs/: .env.example  README.md  pyproject.toml
ahrefs/ahrefs_cli/: __init__.py  browser.py  cache.py  client.py  config.py  main.py
airbnb/: .env.example  README.md  pyproject.toml
airbnb/airbnb_cli/: __init__.py  browser.py  chrome_cookies.py  chrome_session.py  client.py  config.py  main.py
airbnb/tests/: test_client.py
airtable/: .env.example  README.md  pyproject.toml
airtable/airtable_cli/: __init__.py  client.py  config.py  main.py  parsers.py
airtable/tests/: test_bases_list.py  test_bases_pagination.py  test_cache_clear.py  test_client_timeout.py  test_fields_create.py  test_fields_list.py  test_fields_update.py  test_records_delete.py  test_records_pagination.py  test_records_properties.py  test_records_upload_attachment.py  test_tables_list.py
amazon/: .env.example  README.md  pyproject.toml
amazon-associates/: .env.example  README.md  pyproject.toml
amazon-associates/amazon_associates_cli/: __init__.py  browser.py  client.py  commands.py  config.py  main.py  parsers.py
amazon/amazon_cli/: __init__.py  browser.py  client.py  commands.py  config.py  main.py  parsers.py
amazon/tests/: test_orders_auth.py  test_startup_import.py
apple/: .env.example  README.md  pyproject.toml
apple/apple_cli/: __init__.py  auth_capture.py  browser.py  client.py  commands.py  config.py  main.py  parsers.py
apple/tests/: __init__.py  test_auth_capture.py  test_client.py  test_parsers.py
bricklink/: README.md  pyproject.toml
bricklink/bricklink_cli/: __init__.py  browser.py  browser_runtime.py  client.py  config.py  confirmation.py  display.py  main.py  models.py
bricklink/tests/: test_auth_commands.py  test_browser_runtime.py  test_confirmation_e2e.py  test_filters.py  test_message_commands.py  test_order_commands.py  test_profile_resolution.py
cj/: .env.example  README.md  pyproject.toml
cj/cj_cli/: __init__.py  browser.py  client.py  config.py  filter_map.py  main.py
cj/tests/: test_bugfixes.py
claude-code-sessions/: .env.example  README.md  pyproject.toml
claude-code-sessions/claude_code_sessions_cli/: __init__.py  client.py  config.py  main.py  parsers.py
claude-code-sessions/tests/: test_resolve_session_id.py  test_search_run_output.py  test_session_name_flag.py  test_session_summary_custom_title.py  test_timeline_skill_load.py
clickbank/: .env.example  README.md  pyproject.toml
clickbank/clickbank_cli/: __init__.py  browser.py  client.py  config.py  main.py  marketplace_client.py
clickbank/tests/: test_cli.py  test_client.py
codex-sessions/: .env.example  README.md  pyproject.toml
codex-sessions/codex_sessions_cli/: __init__.py  client.py  config.py  main.py  parsers.py
codex-sessions/tests/: test_codex_sessions.py
copilot/: .env.example  CHANGELOG.md  README.md  pyproject.toml
copilot/copilot_cli/: __init__.py  capacity.py  client.py  config.py  main.py  permissions.py  solution_utils.py  validation.py
copilot/docs/: auth.md  configuration.md  connections.md  connectors.md  environments.md  flows.md  solutions.md  tools.md  topic-yaml-schema.md  topics.md  troubleshooting.md
copilot/tests/: test_agent_cloud_resolution.py  test_agent_flow_runs_cancel.py  test_agent_flow_test_output.py  test_agent_list_properties.py  test_agent_model_resolution.py  test_agent_model_runtime.py  test_build_gpt_component_yaml.py  test_capacity_precheck.py  test_config_paths_and_secrets.py  test_config_profile_resolution.py  test_custom_connector_oauth_validation.py  test_publish_bot.py  test_template_line_mustache_format.py
cryptocom/: .env.example  README.md  pyproject.toml
cryptocom/cryptocom_cli/: __init__.py  client.py  config.py  main.py  parsers.py
descript/: .env.example  README.md  pyproject.toml
descript/descript_cli/: __init__.py  app_export.py  client.py  config.py  main.py  monitor.py  monitor_runner.py  platform.py
descript/tests/: test_app_export.py  test_auth_token_sources.py  test_download_export.py  test_platform_cli.py
doordash/: .env.example  README.md  pyproject.toml
doordash/doordash_cli/: __init__.py  browser.py  client.py  config.py  main.py  reorder.py
doordash/tests/: test_auth_status.py  test_client.py  test_webwright_browser.py
dropbox/: .env.example  README.md  pyproject.toml
dropbox/dropbox_cli/: __init__.py  client.py  config.py  main.py  output.py  sync_queue.py
dropbox/tests/: test_files_delete.py  test_sync_queue.py
ebay/: .env.example  README.md  pyproject.toml
ebay/ebay_cli/: __init__.py  __main__.py  browser.py  browser_client.py  client.py  config.py  main.py  parsers.py  properties.py  storage.py  template_validation.py
ebay/scripts/: explore_internal_api.py
ebay/templates/: lego-bulk-schema.json
ebay/tests/: conftest.py  test_client_logistics.py  test_command_credential_mappings.py  test_properties_aliases.py  test_shipping_labels_commands.py  test_shipping_quote_commands.py  test_storage.py
elevenlabs/: .env.example  README.md  pyproject.toml
elevenlabs/elevenlabs_cli/: __init__.py  client.py  config.py  main.py
elevenlabs/tests/: test_pronunciation_dictionaries.py
facebook/: README.md  pyproject.toml
facebook/facebook_cli/: __init__.py  _helpers.py  browser.py  client.py  config.py  images.py  main.py  messenger_parsers.py  models.py  parsers.py
facebook/scripts/: instrument_groups_get.py  instrument_groups_posts_list.py  smoke_groups.py  (+1 more)
fitnesspal/: README.md  pyproject.toml  uv-overrides.txt
freshbooks/: .env.example  README.md  pyproject.toml
gemini/: .env.example  README.md  pyproject.toml
globiflow/: .env.example  README.md  pyproject.toml
google/: .env.example  README.md  pyproject.toml
google-lighthouse/: README.md  pyproject.toml
grammarly/: .env.example  README.md  pyproject.toml
harmony/: README.md  pyproject.toml
imessage/: README.md  pyproject.toml
impact/: .env.example  README.md  pyproject.toml
jira/: .env.example  README.md  pyproject.toml
(+1880 files in other folders)
