[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airbnb-cli"
version = "0.1.0"
description = "CLI interface for Airbnb API"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "cryptography>=42.0.0",
    "cli-tools-shared",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
"airbnb" = "airbnb_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["airbnb_cli*"]

[tool.uv.sources]
cli-tools-shared = { path = "../_repo/cli-tools-shared", editable = true }
