[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airtable-cli"
version = "0.1.0"
description = "CLI interface for Airtable API"
requires-python = ">=3.11"
dependencies = [
    "cli-tools-shared",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
airtable = "airtable_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["airtable_cli*"]

[tool.uv.sources]
cli-tools-shared = { path = "../_repo/cli-tools-shared", editable = true }
