[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apple-cli"
version = "0.1.0"
description = "CLI interface for Apple purchase and subscription history"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.33.1",
    "cli-tools-shared",
]

[project.scripts]
apple = "apple_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["apple_cli*"]

[tool.uv.sources]
cli-tools-shared = { path = "../_repo/cli-tools-shared", editable = true }
