[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bricklink-cli"
version = "0.1.0"
description = "CLI interface for Bricklink API"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "requests-oauthlib>=1.3.0",
    "playwright>=1.40.0",
    "cli-tools-shared",
]

[project.scripts]
bricklink = "bricklink_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bricklink_cli*"]

[tool.uv.sources]
cli-tools-shared = { path = "../_repo/cli-tools-shared", editable = true }
