[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doordash-cli"
version = "0.1.0"
description = "CLI interface for Doordash (browser automation)"
requires-python = ">=3.11"
dependencies = [
    "cli-tools-shared",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    # DoorDashBrowser subclasses cli_tools_shared WebwrightBrowserAutomation, which
    # lazy-imports webwright.environments.local_browser. webwright is an optional
    # extra in cli-tools-shared, so the sole consumer (this CLI) must declare it.
    "webwright @ git+https://github.com/microsoft/Webwright.git",
]

[project.scripts]
doordash = "doordash_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["doordash_cli*"]

[tool.setuptools.package-data]
doordash_cli = ["data/*.json", "data/queries/*.graphql"]

[tool.uv.sources]
cli-tools-shared = { path = "../_repo/cli-tools-shared", editable = true }
