[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doordash-cli"
version = "0.1.0"
description = "CLI interface for Doordash (browser automation)"
requires-python = ">=3.11"
dependencies = [
    "cli-tools-shared",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    # webwright (microsoft/Webwright) powers live browser auth via cli_tools_shared
    # WebwrightBrowserAutomation, but it is Git-only (not on PyPI) and is intentionally
    # NOT a resolved dependency so this CLI stays portable (repo portability tests forbid
    # Git sources). It is lazy-imported at browser_open() time and installed out-of-band
    # on hosts that run live DoorDash auth -- see README "Live browser auth (optional
    # webwright)". The shared service raises a clear install hint if webwright is absent.
]

[project.scripts]
doordash = "doordash_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["doordash_cli*"]

[tool.setuptools.package-data]
doordash_cli = ["data/*.json", "data/queries/*.graphql"]

[tool.uv.sources]
cli-tools-shared = { path = "../_repo/cli-tools-shared", editable = true }
