[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dropbox-cli"
version = "0.1.0"
description = "CLI interface for Dropbox API"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "dropbox>=12.0.0",
    "cli-tools-shared",
]

[project.scripts]
dropbox = "dropbox_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["dropbox_cli*"]

[tool.uv.sources]
cli-tools-shared = { path = "../_repo/cli-tools-shared", editable = true }
