[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebay-cli"
version = "0.1.0"
description = "CLI interface for eBay Fulfillment API"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "jsonschema>=4.0.0",
    "pydantic>=2.0.0",
    "cli-tools-shared",
    "playwright>=1.40.0",
]

[project.scripts]
ebay = "ebay_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["ebay_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
cli-tools-shared = { path = "../_repo/cli-tools-shared", editable = true }
