[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-cli"
version = "0.1.0"
description = "CLI interface for Gemini API"
requires-python = ">=3.11"
dependencies = [
    "cli-tools-shared",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "google-genai>=2.0.0",
    "google-cloud-bigquery>=3.25.0",
    "google-cloud-monitoring>=2.20.0",
]

[project.scripts]
gemini = "gemini_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["gemini_cli*"]

[tool.uv.sources]
cli-tools-shared = { path = "../_repo/cli-tools-shared", editable = true }
