[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-lighthouse-cli"
version = "0.1.0"
description = "CLI wrapper for lighthouse"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "cli-tools-shared",
]

[project.scripts]
google-lighthouse = "google_lighthouse_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["google_lighthouse_cli*"]

[tool.uv.sources]
cli-tools-shared = { path = "../_repo/cli-tools-shared", editable = true }
