[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-cli"
version = "0.1.0"
description = "CLI interface for Google Workspace APIs (Docs, Drive, Sheets, Gmail, Calendar)"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "cli-tools-shared",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "pillow>=11.3.0",
]

[dependency-groups]
dev = [
    "playwright>=1.40.0",
]

[project.scripts]
google = "google_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["google_cli*"]

[tool.uv.sources]
cli-tools-shared = { path = "../_repo/cli-tools-shared", editable = true }
