[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harmony-cli"
version = "0.1.0"
description = "Manage Logitech Harmony hubs, activities, devices, and commands"
requires-python = ">=3.11"
dependencies = [
    "aioharmony>=1.0.8",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "zeroconf>=0.149.16",
    "cli-tools-shared",
]

[project.scripts]
"harmony" = "harmony_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["harmony_cli*"]

[tool.uv.sources]
cli-tools-shared = { path = "../_repo/cli-tools-shared", editable = true }
